--- a/index.html
+++ b/index.html
@@ -129,11 +129,16 @@
         <div class="season-title">Season 4</div>
         <div class="season-date">20 Nov 2025 → 28 Jan 2026 • 423.77M points</div>
 
-        <div id="remainingDays" class="season-remaining">Loading...</div>
+        <div style="display:flex; justify-content:space-between; align-items:center;">
+    <div id="remainingDays" class="season-remaining">Loading...</div>
+    <div id="dayPercent" class="season-remaining" style="color:#ffb300;"></div>
+</div>
+
 
         <div class="progress-bar">
             <div id="progressFill" class="progress"></div>
         </div>
+        
     </div>
 
     <!-- FORM -->
@@ -189,3 +194,4 @@ function calculatePoints() {
 
 </body>
 </html>
+
